// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BMP fixtures > decodes and roundtrips bit1.bmp 1`] = `
{
  "bitPP": 1,
  "compress": 0,
  "fileName": "bit1.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 1602,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit4.bmp 1`] = `
{
  "bitPP": 4,
  "compress": 0,
  "fileName": "bit4.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 5202,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit4_RLE.bmp 1`] = `
{
  "bitPP": 4,
  "compress": 2,
  "fileName": "bit4_RLE.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 2622,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit8.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 0,
  "fileName": "bit8.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 10002,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit8_RLE.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 1,
  "fileName": "bit8_RLE.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 2974,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_565.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_565.bmp",
  "firstPixelABGR": [
    255,
    248,
    252,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    255,
    248,
    252,
    248,
    255,
    248,
    252,
    248,
    255,
    248,
    252,
    248,
    255,
    248,
    252,
    248,
    255,
    248,
    252,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_a444.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_a444.bmp",
  "firstPixelABGR": [
    0,
    240,
    240,
    240,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
    0,
    240,
    240,
    240,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_a555.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_a555.bmp",
  "firstPixelABGR": [
    0,
    248,
    248,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
    0,
    248,
    248,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_x444.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 3,
  "fileName": "bit16_x444.bmp",
  "firstPixelABGR": [
    255,
    240,
    240,
    240,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    255,
    240,
    240,
    240,
    255,
    240,
    240,
    240,
    255,
    240,
    240,
    240,
    255,
    240,
    240,
    240,
    255,
    240,
    240,
    240,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit16_x555.bmp 1`] = `
{
  "bitPP": 16,
  "compress": 0,
  "fileName": "bit16_x555.bmp",
  "firstPixelABGR": [
    255,
    248,
    248,
    248,
  ],
  "height": 100,
  "rawSize": 20002,
  "sampleABGR": [
    255,
    248,
    248,
    248,
    255,
    248,
    248,
    248,
    255,
    248,
    248,
    248,
    255,
    248,
    248,
    248,
    255,
    248,
    248,
    248,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit24.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "bit24.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 30002,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit32.bmp 1`] = `
{
  "bitPP": 32,
  "compress": 3,
  "fileName": "bit32.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 40002,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips bit32_alpha.bmp 1`] = `
{
  "bitPP": 32,
  "compress": 0,
  "fileName": "bit32_alpha.bmp",
  "firstPixelABGR": [
    0,
    255,
    255,
    255,
  ],
  "height": 100,
  "rawSize": 40002,
  "sampleABGR": [
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
    0,
    255,
    255,
    255,
  ],
  "width": 100,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-info-bottomup-3x2.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "generated/valid-info-bottomup-3x2.bmp",
  "firstPixelABGR": [
    255,
    0,
    50,
    90,
  ],
  "height": 2,
  "rawSize": 24,
  "sampleABGR": [
    255,
    0,
    50,
    90,
    255,
    73,
    67,
    221,
    255,
    146,
    84,
    96,
    255,
    41,
    147,
    119,
    255,
    114,
    164,
    250,
  ],
  "width": 3,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-info-topdown-3x2.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "generated/valid-info-topdown-3x2.bmp",
  "firstPixelABGR": [
    255,
    0,
    50,
    90,
  ],
  "height": 2,
  "rawSize": 24,
  "sampleABGR": [
    255,
    0,
    50,
    90,
    255,
    73,
    67,
    221,
    255,
    146,
    84,
    96,
    255,
    41,
    147,
    119,
    255,
    114,
    164,
    250,
  ],
  "width": 3,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-os2-core-2x2.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "generated/valid-os2-core-2x2.bmp",
  "firstPixelABGR": [
    255,
    0,
    50,
    90,
  ],
  "height": 2,
  "rawSize": 0,
  "sampleABGR": [
    255,
    0,
    50,
    90,
    255,
    73,
    67,
    221,
    255,
    41,
    147,
    119,
    255,
    114,
    164,
    250,
  ],
  "width": 2,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-pal8-3x2.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 0,
  "fileName": "generated/valid-pal8-3x2.bmp",
  "firstPixelABGR": [
    255,
    255,
    0,
    0,
  ],
  "height": 2,
  "rawSize": 8,
  "sampleABGR": [
    255,
    255,
    0,
    0,
    255,
    0,
    255,
    0,
    255,
    0,
    0,
    255,
    255,
    0,
    0,
    0,
    255,
    0,
    0,
    255,
  ],
  "width": 3,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-rle8-4x2.bmp 1`] = `
{
  "bitPP": 8,
  "compress": 1,
  "fileName": "generated/valid-rle8-4x2.bmp",
  "firstPixelABGR": [
    255,
    255,
    255,
    255,
  ],
  "height": 2,
  "rawSize": 18,
  "sampleABGR": [
    255,
    255,
    255,
    255,
    255,
    0,
    0,
    0,
    255,
    255,
    255,
    255,
    255,
    0,
    0,
    0,
    255,
    0,
    0,
    0,
  ],
  "width": 4,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-v4-oddwidth-5x1.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "generated/valid-v4-oddwidth-5x1.bmp",
  "firstPixelABGR": [
    255,
    0,
    50,
    90,
  ],
  "height": 1,
  "rawSize": 16,
  "sampleABGR": [
    255,
    0,
    50,
    90,
    255,
    73,
    67,
    221,
    255,
    146,
    84,
    96,
    255,
    219,
    101,
    227,
    255,
    36,
    118,
    102,
  ],
  "width": 5,
}
`;

exports[`BMP fixtures > decodes and roundtrips generated/valid-v5-2x2.bmp 1`] = `
{
  "bitPP": 24,
  "compress": 0,
  "fileName": "generated/valid-v5-2x2.bmp",
  "firstPixelABGR": [
    255,
    0,
    50,
    90,
  ],
  "height": 2,
  "rawSize": 16,
  "sampleABGR": [
    255,
    0,
    50,
    90,
    255,
    73,
    67,
    221,
    255,
    41,
    147,
    119,
    255,
    114,
    164,
    250,
  ],
  "width": 2,
}
`;
